# mopbot

./: .dockerignore  .gitignore  Dockerfile  README.md  action.yml  config.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: code-analysis.yml  test.yml  update-docs.yml
src/mopbot/: __main__.py  config.py  configuration.py  roles.py
src/mopbot/data/: schema.json
